--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-@import "https://fonts.gstatic.com";
 @import "https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;700&display=swap";
 
 * {
@@ -6,18 +5,22 @@
     padding: 0;
     border: 0;
 }
+
 body {
     background: #282a36;
     font-family: 'Source Sans Pro', sans-serif;
 }
+
 header {
     padding: 32px;
     border-bottom: 1px solid #333;
     background: rgba(0, 0, 0, 0.1);
 }
+
 header div {
     text-align: center;
 }
+
 header div a {
     color: white;
     font-size: 18px;
@@ -25,7 +28,19 @@ header div a {
     margin: 0 16px;
     text-decoration: none;
 }
+
 header div a:hover {
     color: #50fa7b;
     transition: color 700ms;
+}
+
+#wrapper {
+    text-align: center;
+    padding: 32px;
+}
+
+#wrapper img {
+    border-radius: 50%;
+    border: 2px solid #50fa7b;
+    margin-bottom: 32px;
 }
