--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,9 @@
 @import "https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;700&display=swap";
 
+:root {
+    --color-green: #50fa7b;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -31,7 +35,7 @@ header div a {
 }
 
 header div a:hover {
-    color: #50fa7b;
+    color: var(--color-green);
     transition: color 700ms;
 }
 
@@ -42,7 +46,7 @@ header div a:hover {
 
 #wrapper img {
     border-radius: 50%;
-    border: 2px solid #50fa7b;
+    border: 2px solid var(--color-green);
     margin-bottom: 32px;
 }
 
@@ -62,7 +66,7 @@ header div a:hover {
 
 #wrapper h2 a {
     text-decoration: none;
-    color: #50fa7b;
+    color: var(--color-green);
 }
 
 #wrapper p {
