--- a/styles.css
+++ b/styles.css
@@ -22,11 +22,11 @@ header {
     background: rgba(0, 0, 0, 0.1);
 }
 
-header div {
+.links {
     text-align: center;
 }
 
-header div a {
+.links a {
     color: white;
     font-size: 18px;
     line-height: 28px;
@@ -34,7 +34,7 @@ header div a {
     text-decoration: none;
 }
 
-header div a:hover {
+.links a:hover {
     color: var(--color-green);
     transition: color 700ms;
 }
@@ -48,6 +48,7 @@ header div a:hover {
     border-radius: 50%;
     border: 2px solid var(--color-green);
     margin-bottom: 32px;
+    height: 300px;
 }
 
 #wrapper h1 {
@@ -73,4 +74,8 @@ header div a:hover {
     max-width: 500px;
     margin: 32px auto;
     font-size: 24px;
+}
+
+#links-footer a{
+    border-bottom: 1px solid var(--color-green);
 }
