--- a/styles.css
+++ b/styles.css
@@ -79,3 +79,22 @@ header {
 #links-footer a{
     border-bottom: 1px solid var(--color-green);
 }
+
+/* Cards */
+
+.cards {
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.card {
+    background-color: #7159c1;
+}
+
+.card__image-container  img {
+    width: 100%;
+}
+
+.card__content, .card__info {
+    padding: 24px;
+}
