--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ header {
 }
 
 #wrapper h1 {
-    font-size: 42;
+    font-size: 42px;
     line-height: 52px;
     font-weight: bold;
 }
@@ -86,6 +86,7 @@ header {
 .cards {
     max-width: 800px;
     margin: 0 auto;
+    margin-bottom: 20px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 20px;
@@ -101,7 +102,7 @@ header {
 }
 
 .card__content, .card__info {
-    padding: 24px;
+    padding: 15px;
 }
 
 .card__info {
